#210452 [T13y] Duplicate occurrences of bundle keys in Web and EE modules

--- a/j2ee.weblogic9/src/org/netbeans/modules/j2ee/weblogic9/config/Bundle.properties
+++ b/j2ee.weblogic9/src/org/netbeans/modules/j2ee/weblogic9/config/Bundle.properties
@@ -62,8 +62,7 @@ is not known or does not exist or is not readable.
 MSG_datasourcesXmlCannotParse=Configuration file {0} is not parseable - cannot perform changes.
 MSG_datasourcesXmlNotValid=Currently edited {0} configuration file is in \
 an inconsistent state. Do you want to proceed anyway?
-MSG_CannotUpdateFile=Cannot update the configuration file. Please make sure you \
-have write access to this file.
+MSG_CannotUpdate=Cannot update a configuration file.
 MSG_FailedToCreateConfigFolder=The {0} folder could not be created.
 
 MSG_FailedToDeployDatasource=One or more datasources could not be deployed. Check project configuration.
