#168400 - Can not search in current project when no main project is set

--- a/utilities.project/src/org/netbeans/modules/search/project/Bundle.properties
+++ b/utilities.project/src/org/netbeans/modules/search/project/Bundle.properties
@@ -53,6 +53,7 @@ LBL_Title_SearchProjects=Find/Replace in Projects
 SearchScopeNameOpenProjects=&Open Projects
 SearchScopeNameMainProject=M&ain Project
 SearchScopeNameSelectedNodes=Selection
+SearchScopeCurrentProject=Current Project ({0})
 
 # Displays number of nodes selected if 2 or more nodes are selected.
 # In English language, this template is simple. For some other languages,
