--- a/jellytools.java/test/qa-functional/src/org/netbeans/jellytools/JavaBundleKeysTest.properties
+++ b/jellytools.java/test/qa-functional/src/org/netbeans/jellytools/JavaBundleKeysTest.properties
@@ -11,7 +11,7 @@ org.netbeans.modules.java.editor.codegen.Bundle=LBL_constructor,LBL_delegate_met
 org.netbeans.modules.java.freeform.resources.Bundle=Templates/Project/Standard/j2sefreeform.xml
 org.netbeans.modules.java.freeform.ui.Bundle=BTN_ClasspathPanel_addClasspath,BTN_ClasspathPanel_removeClasspath,BTN_SourceFoldersPanel_addFolder,BTN_SourceFoldersPanel_removeFolder,LBL_ClasspathPanel_Move_Down,LBL_ClasspathPanel_Move_Up,LBL_ClasspathPanel_jLabel2,LBL_ClasspathPanel_jLabel3,LBL_SourceFoldersPanel_jLabel1,LBL_SourceFoldersPanel_jLabel2,LBL_SourceFoldersPanel_jLabel3
 org.netbeans.modules.java.j2seproject.Bundle=NAME_src.dir
-org.netbeans.modules.java.j2seproject.ui.wizards.Bundle=LBL_NWP1_BrowseLocation_Button,LBL_NWP1_CreatedProjectFolder_Lablel,LBL_NWP1_ProjectLocation_Label,LBL_NWP1_ProjectName_Label,LBL_NWP1_SelectProjectLocation,LBL_createMainCheckBox,LBL_setAsMainCheckBox,Templates/Project/Standard,template_app,template_library,template_existing
+org.netbeans.modules.java.j2seproject.ui.wizards.Bundle=LBL_NWP1_BrowseLocation_Button,LBL_NWP1_CreatedProjectFolder_Lablel,LBL_NWP1_ProjectLocation_Label,LBL_NWP1_ProjectName_Label,LBL_NWP1_SelectProjectLocation,LBL_createMainCheckBox,Templates/Project/Standard,template_app,template_library,template_existing
 org.netbeans.modules.java.project.Bundle=LBL_JavaTargetChooserPanelGUI_CreatedFile_Label,LBL_JavaTargetChooserPanelGUI_Name,LBL_JavaTargetChooserPanelGUI_jLabel1,LBL_JavaTargetChooserPanelGUI_jLabel2,Templates/Classes,Class.java
 org.netbeans.modules.navigator.Bundle=Menu/Window/Navigator
 org.netbeans.modules.nbform.Bundle=CTL_DesignTabCaption,CTL_SourceTabCaption
