#210486 - Usability: Rename message from Sources directory to 'Sources Folder' to match label

--- a/php.project/src/org/netbeans/modules/php/project/ui/wizards/Bundle.properties
+++ b/php.project/src/org/netbeans/modules/php/project/ui/wizards/Bundle.properties
@@ -165,8 +165,8 @@ MSG_SourcesEmpty=Sources directory is empty.
 MSG_SourcesCannotBeRead=Sources directory cannot be read.
 MSG_ProjectFolderCannotBeRead=Project Folder directory cannot be read.
 MSG_TargetFolderVisible=<html>The directory must be accessible via your web server at URL {0}.</html>
-MSG_SourcesAlreadyProject=Sources directory is already NetBeans project (maybe only in memory).
-MSG_ProjectAlreadyProject=Project directory is already NetBeans project (maybe only in memory).
+MSG_SourcesAlreadyProject=Sources folder is already NetBeans project (maybe only in memory).
+MSG_ProjectAlreadyProject=Project folder is already NetBeans project (maybe only in memory).
 
 # step 2
 LBL_RunConfigurationInfo1=<html>Specify the way this project's files will be deployed.</html>
