--- a/php.editor/src/org/netbeans/modules/php/editor/resources/Bundle.properties
+++ b/php.editor/src/org/netbeans/modules/php/editor/resources/Bundle.properties
@@ -75,6 +75,7 @@ constant=Magic Constants
 heredocdelimiter=HereDoc Delimiter
 PHP_VARIABLE=Variable
 PHP_STRING=Plain Text
+number=Number
 
 mod-unused=Unused Element
 mod-abstract=Abstract Element
