--- a/ide.branding/nbproject/project.properties
+++ b/ide.branding/nbproject/project.properties
@@ -1,3 +1,5 @@
 extra.module.files=**/*_nb.jar
 is.autoload=true
+javac.compilerargs=-Xlint -Xlint:-serial
+javac.source=1.6
 pack200.excludes=modules/ext/locale/updater_*.jar
