--- a/api.search/src/org/netbeans/modules/search/Bundle.properties
+++ b/api.search/src/org/netbeans/modules/search/Bundle.properties
@@ -116,6 +116,7 @@ TEXT_MSG_LIMIT_REACHED_MATCHES_COUNT=The search was stopped because the limit fo
 TEXT_PREPARE_SEARCH___=Preparing data for searching...
 TEXT_SEARCHING___=Searching...
 TEXT_SEARCH_LONG_STRING_MIDDLE=...
+TEXT_WAITING_FOR_PREVIOUS=Waiting for previous searches...
 TEXT_FINISHING_PREV_SEARCH=Finishing the previous search...
 TEXT_FINISHING_REPLACE=Finishing the replace operation...
 TEXT_CLEANING_RESULT=Cleaning the previous results...
