Issue #210346 - [regression] Find Usages dialog has invisible "Scope" chooser

--- a/refactoring.java/src/org/netbeans/modules/refactoring/java/ui/Bundle.properties
+++ b/refactoring.java/src/org/netbeans/modules/refactoring/java/ui/Bundle.properties
@@ -157,6 +157,7 @@ DSC_Scan_Warning={0} (<i>Note: Scanning is in progress, results may be incomplet
 LBL_UsagesOfElement=Usages of:
 LBL_FindOverridingMethods=Find &Overriding Methods
 LBL_FindUsages=Find &Usages
+LBL_FindUsagesOverridingMethods=Find Usages &and Overriding Methods
 LBL_FindAllSubtypes=Find &All Subtypes
 LBL_FindDirectSubtypesOnly=Find &Direct Subtypes Only
 LBL_SearchInComents=Search in &Comments
