#203798 - Misleading validation message by creation of web project with existing sources

--- a/j2ee.common/src/org/netbeans/modules/j2ee/common/project/ui/Bundle.properties
+++ b/j2ee.common/src/org/netbeans/modules/j2ee/common/project/ui/Bundle.properties
@@ -89,6 +89,7 @@ MSG_IllegalDisk=At least disk roots must be mounted!
 MSG_CreateDir=Folder does not exist. Do you want to create it?
 MSG_ProjectFolderReadOnly=Project Folder is read-only.
 MSG_ProjectFolderHasDeletedProject=Project Folder was just in use. Please restart the IDE to reuse folder.
+MSG_ProjectFolderHasNbProject=Project folder already contains a NetBeans project.
 LBL_SelectProjectDirectoryTitle=Select Project Folder
 ACSN_PanelProjectLocationVisual=N/A
 ACSD_PanelProjectLocationVisual=N/A
