Issue #210496 - IllegalArgumentException at com.sun.tools.javac.api.JavacTaskImpl.parseType

--- a/refactoring.java/test/unit/src/org/netbeans/modules/refactoring/java/plugins/Bundle_test.properties
+++ b/refactoring.java/test/unit/src/org/netbeans/modules/refactoring/java/plugins/Bundle_test.properties
@@ -94,6 +94,7 @@ ERR_MoveGenericField=ERR_MoveGenericField
 WRN_InitNoAccess=WRN_InitNoAccess
 WRN_NoAccessor=WRN_NoAccessor
 ERR_CannotMovePublicIntoSamePackage=ERR_CannotMovePublicIntoSamePackage
+ERR_InvalidPackage=ERR_InvalidPackage
 
 # Pull Up
 ERR_PullUp_MemberAlreadyExists=ERR_PullUp_MemberAlreadyExists
