More translatability issues in JSF, JSP and Groovy/Grails.

--- a/groovy.grails/src/org/netbeans/modules/groovy/grails/settings/Bundle.properties
+++ b/groovy.grails/src/org/netbeans/modules/groovy/grails/settings/Bundle.properties
@@ -42,6 +42,7 @@
 
 AdvancedOption_DisplayName_GrailsRuntime=Grails
 AdvancedOption_Tooltip_GrailsRuntime=Grails runtime settings
+# Followed by a URL where Grails can be downloaded
 SupportPanel.jLabel2.text=Get Grails at
 
 GrailsRuntimePanel.jLabel5.text=Grails &Home:
