--- a/groovy.support/src/org/netbeans/modules/groovy/support/options/Bundle.properties
+++ b/groovy.support/src/org/netbeans/modules/groovy/support/options/Bundle.properties
@@ -40,6 +40,7 @@
 # Version 2 license, then the option applies only if the new code is
 # made subject to such option by the copyright holder.
 
+# Followed by a URL where Groovy can be downloaded
 SupportPanel.jLabel2.text=Get Groovy at
 
 OptionsCategory_Name_Groovy=Groovy
