--- a/web.core/src/org/netbeans/modules/web/core/palette/items/Bundle.properties
+++ b/web.core/src/org/netbeans/modules/web/core/palette/items/Bundle.properties
@@ -91,17 +91,17 @@ ACSD_SetProperty_PropertyValue=Property value of the selected Bean
 ACSD_SetProperty_Dialog=This dialog allows you to customize the code that will be generated for Set Bean Property tag.
 
 #UseBean
-LBL_UseBean_ID=&ID\:
+LBL_UseBean_ID=&Id\:
 
 LBL_UseBean_Class=&Class\:
 
 LBL_UseBean_Scope=&Scope\:
-ACSN_UseBean_ID=Bean ID
+ACSN_UseBean_ID=Bean Id
 
 ACSN_UseBean_Class=Class
 
 ACSN_UseBean_Scope=Scope
-ACSD_UseBean_ID=Select Bean ID 
+ACSD_UseBean_ID=Select Bean Id
 
 ACSD_UseBean_Class=Class name of the selected Bean
 
@@ -260,8 +260,8 @@ LBL_Stmt_DataSource=&Data Source\:
 ACSN_Stmt_DataSource=Data Source
 
 ACSD_Stmt_DataSource=Queried data source
-Error_Empty_ID=Enter bean ID
-Error_not_uniq_ID=Bean with such ID already defined
+Error_Empty_ID=Enter bean Id
+Error_not_uniq_ID=Bean with such Id already defined
 Error_Empty_class=Enter Class name
 Error_No_Such_class=Class not found
 Error_Empty_VariableName=Enter Variable Name
