Fix for BZ#209105 - Fix translatability issues in Web services area

--- a/xml.wsdl.model/src/org/netbeans/modules/xml/wsdl/validator/visitor/Bundle.properties
+++ b/xml.wsdl.model/src/org/netbeans/modules/xml/wsdl/validator/visitor/Bundle.properties
@@ -65,7 +65,7 @@ MUST_SPECIFY_URI_RESOLVER_FACTORY=URI Resolver Factory must be specified in \
                                   order for imports to function correctly
 # {0} operation name
 VAL_FAULT_NOT_ALLOWED_IN_OPERATION=An one-way or notification operation cannot throw \
-                              faults. The operation "{0}" does
+                              faults
 
 # {0} operation name
 FIX_FAULT_NOT_ALLOWED_IN_OPERATION=Please remove the faults in the operation "{0}"
