--- a/apisupport.wizards/src/org/netbeans/modules/apisupport/project/ui/wizard/javahint/Bundle.properties
+++ b/apisupport.wizards/src/org/netbeans/modules/apisupport/project/ui/wizard/javahint/Bundle.properties
@@ -1,6 +1,11 @@
-JavaHintPanel.jLabel1.text=&Class Name:
-JavaHintPanel.jLabel2.text=Hint Display &Name:
-JavaHintPanel.jLabel3.text=&Warning Message:
-JavaHintPanel.jLabel4.text=Hint &Description:
-JavaHintPanel.jLabel5.text=&Fix Display Name:
-JavaHintPanel.automaticFix.text=Will Also Provide an &Automatic Fix
+JavaHintLocationPanel.jLabel1.text=&Class Name:
+JavaHintDataPanel.jLabel5.text=&Fix Display Name:
+JavaHintDataPanel.jLabel1.text=&Class Name:
+JavaHintDataPanel.jLabel3.text=&Warning Message:
+JavaHintDataPanel.jLabel2.text=Hint Display &Name:
+JavaHintDataPanel.automaticFix.text=Will Also Provide an &Automatic Fix
+JavaHintDataPanel.jLabel4.text=Hint &Description:
+JavaHintLocationPanel.createdFiles.text=&Created Files:
+JavaHintLocationPanel.packageNameTxt.text=Pac&kage:
+JavaHintLocationPanel.modifiedFilesValue.toolTipText=modifiedFilesValue
+JavaHintLocationPanel.modifiedFiles.text=&Modified Files:
