add a warning note about how the added repository is used in the IDE.

--- a/maven.repository/src/org/netbeans/modules/maven/repository/register/Bundle.properties
+++ b/maven.repository/src/org/netbeans/modules/maven/repository/register/Bundle.properties
@@ -57,3 +57,4 @@ RepositoryRegisterUI.txtRepoUrl.AccessibleContext.accessibleDescription=Reposito
 RepositoryRegisterUI.txtIndexUrl.AccessibleContext.accessibleDescription=Index URL
 RepositoryRegisterUI.jraLocal.AccessibleContext.accessibleDescription=Local
 RepositoryRegisterUI.jraRemote.AccessibleContext.accessibleDescription=Remote
+RepositoryRegisterUI.jLabel1.text=<html>Please Note: <p>Adding a repository here doesn't affect your Maven builds in any way.<p> It's only used to provide the IDE with information from the repository's index.
