#204139 Deploy on save doesn't work for EAR

--- a/j2ee.weblogic9/src/org/netbeans/modules/j2ee/weblogic9/deploy/Bundle.properties
+++ b/j2ee.weblogic9/src/org/netbeans/modules/j2ee/weblogic9/deploy/Bundle.properties
@@ -118,3 +118,5 @@ MSG_Library_Failed_Interrupted=Library deployment failed. The deployment was int
 
 MSG_Enabling_JPA2=Enabling JPA 2 support
 MSG_Disabling_JPA2=Disabling JPA 2 support
+
+ERR_UndeployAndRedeploy=Project is currently archive deployed. Undeploy this project and redeploy it to take advantage of directory deployment.
