--- a/installer/mac/newbuild/build.xml
+++ b/installer/mac/newbuild/build.xml
@@ -605,6 +605,10 @@ Microsystems, Inc. All Rights Reserved.
             <arg value="cp -RPf ${packages} '${mpkg.file}'/Contents/Packages"/>
         </exec>                                            
         
+        <condition property="output.dir" value="${output.jdk7.dir}">
+	     <equals arg1="${build.jdk7}" arg2="1"/>
+        </condition>
+        
         <exec executable="sh" failonerror="yes">
           <arg value="-c"/>
           <arg value="sh dmg/createdmg.sh '${dmg.name}'.dmg '${mpkg.name}' '${output.dir}'"/>
