#208644 Missing valid warning message

--- a/server/src/org/netbeans/modules/server/ui/wizard/Bundle.properties
+++ b/server/src/org/netbeans/modules/server/ui/wizard/Bundle.properties
@@ -97,3 +97,5 @@ LBL_ACIW_ChooseServer=Choose Cloud
 LBL_ACIW_Ellipsis=...
 MSG_CCV_ChooseServer=Choose a cloud
 LBL_CCV_Name=Choose Cloud
+
+MSG_WrongServerIntance=The plugin returned an unknow representation of the instance: {0}
