#210087, #210184: making Source/Inspect... configurations work for java.hints, and a few related fixes.

--- a/code.analysis/src/org/netbeans/modules/analysis/Bundle.properties
+++ b/code.analysis/src/org/netbeans/modules/analysis/Bundle.properties
@@ -7,3 +7,4 @@ RunAnalysisPanel.manage.text=&Manage...
 RunAnalysisPanel.configurationRadio.text=&Configuration:
 RunAnalysisPanel.singleInspectionRadio.text=&Single Inspection:
 RunAnalysisPanel.browse.text=&Browse...
+DN_Default=Default
