--- a/refactoring.java/test/unit/src/org/netbeans/modules/refactoring/java/plugins/Bundle_test.properties
+++ b/refactoring.java/test/unit/src/org/netbeans/modules/refactoring/java/plugins/Bundle_test.properties
@@ -95,6 +95,9 @@ WRN_InitNoAccess=WRN_InitNoAccess
 WRN_NoAccessor=WRN_NoAccessor
 ERR_CannotMovePublicIntoSamePackage=ERR_CannotMovePublicIntoSamePackage
 ERR_InvalidPackage=ERR_InvalidPackage
+ERR_MoveMethodPolymorphic=ERR_MoveMethodPolymorphic
+ERR_MoveAbstractMember=ERR_MoveAbstractMember
+ERR_MoveFromClass=ERR_MoveFromClass
 
 # Pull Up
 ERR_PullUp_MemberAlreadyExists=ERR_PullUp_MemberAlreadyExists
