#207240 - Some configuration options get always overridden from the dialog

--- a/php.apigen/src/org/netbeans/modules/php/apigen/ui/customizer/Bundle.properties
+++ b/php.apigen/src/org/netbeans/modules/php/apigen/ui/customizer/Bundle.properties
@@ -57,3 +57,5 @@ ApiGenPanel.deprecatedCheckBox.text=&Deprecated
 ApiGenPanel.todoCheckBox.text=TO&DO
 ApiGenPanel.downloadCheckBox.text=Down&load
 ApiGenPanel.sourceCodeCheckBox.text=&Source Code
+ApiGenPanel.noConfigRadioButton.text=Manual Configuration:
+ApiGenPanel.configRadioButton.text=Configuration File:
