Bug 210413 - Fast Remote search
This is an initial implementation of search based on find/grep command-line utilities

--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -943,6 +943,7 @@ nb.cluster.cnd=\
         cnd.repository,\
         cnd.repository.api,\
         cnd.script,\
+        cnd.search,\
         cnd.simpleunit,\
         cnd.source,\
         cnd.spellchecker.bindings,\
