#208489: Installer doesn't update file type association

--- a/installer/components/products/nb-base/src/org/netbeans/installer/products/nb/base/Bundle.properties
+++ b/installer/components/products/nb-base/src/org/netbeans/installer/products/nb/base/Bundle.properties
@@ -73,13 +73,14 @@ CL.install.error.netbeans.conf=Cannot update the netbeans.conf file
 CL.install.error.glassfish.integration=Failed to integrate the IDE with existing GlassFish and AppServer installations
 CL.install.error.tomcat.integration=Failed to integrate the IDE with existing Apache Tomcat installations
 CL.install.error.javafxsdk.integration=Failed to integrate the IDE with existing JavaFX SDK installations
-CL.uninstall.error.update.files=Cannot remove update files
 CL.install.error.netbeans.update.tracking=Cannot update CRC sums of update tracking files
 
 CL.uninstall.error.license.accepted=Cannot remove the license_accepted marker file
 CL.uninstall.error.product.id=Cannot remove the productid file
 CL.uninstall.error.start.menu=Cannot remove desktop shortcut
 CL.uninstall.error.desktop=Cannot remove Start Menu entries
+CL.uninstall.error.update.files=Cannot remove update files
+CL.uninstall.error.registry=Cannot check windows registry: {0}
 
 # OS Integration ###############################################################
 CL.desktop.shortcut.name=NetBeans IDE {display-version}
