--- a/javafx2.project/src/org/netbeans/modules/javafx2/project/ui/Bundle.properties
+++ b/javafx2.project/src/org/netbeans/modules/javafx2/project/ui/Bundle.properties
@@ -3,7 +3,9 @@ LBL_Category_Run=Run
 LBL_Select_Icon_Image=Select Icon Image
 LBL_Select_HTML_File=Select HTML File
 LBL_ChooseMainClass_Title=Browse JavaFX 2.0 Application Classes
+LBL_ChooseMainClass_Title_Swing=Browse Main Classes
 LBL_ChooseMainClass_OK=Select Class
+LBL_ChooseMainClass_SCANNING_MESSAGE=Scanning in progress, partial results shown ...
 Item_ChooseMainClass_WARMUP_MESSAGE=Initializing view, please wait ...
 AD_ChooseMainClass_OK=N/A
 MSG_IconFileFilter_Description=Icon image files
@@ -117,9 +119,9 @@ JFXConfigurationProvider.input.duplicate=Configuration {0} already exists.
 JFXConfigurationProvider.input.empty=Configuration name cannot be empty.
 JFXConfigurationProvider_Run_Working_Directory_Browse_Title=Browse Working Directory
 
-LBL_JFXApplicationClassChooser.labelAppClasses.text=&Available Application classes:
+LBL_JFXApplicationClassChooser.labelAppClasses.text=&Available classes:
 AD_JFXApplicationClassChooser.labelAppClasses.text=N/A
-AN_JFXApplicationClassChooser.labelAppClasses.text=&Available Application classes
+AN_JFXApplicationClassChooser.labelAppClasses.text=&Available classes
 
 LBL_JFXSigningPanel.radioButtonSelfSign.text=Self-sign by &generated key
 AD_JFXSigningPanel.radioButtonSelfSign.text=N/A
@@ -248,3 +250,4 @@ JFXDeploymentPanel.labelInitialRemark.AccessibleContext.accessibleDescription=N/
 JFXDeploymentPanel.labelProperties.AccessibleContext.accessibleDescription=N/A
 JFXDeploymentPanel.labelInitialRemarkSwing.text=<html>Single JNLP deployment file will be generated for Web Start and Browser deployment using properties set in Application, Run and Deployment panels. Active Run Configuration is used from Run panel.</html>
 JFXDeploymentPanel.labelInitialRemarkSwing.AccessibleContext.accessibleDescription=N/A
+JFXApplicationClassChooser.jLabel1.AccessibleContext.accessibleDescription=N/A
