--- a/glassfish.common/src/org/netbeans/modules/glassfish/common/Bundle.properties
+++ b/glassfish.common/src/org/netbeans/modules/glassfish/common/Bundle.properties
@@ -102,6 +102,8 @@ ERR_Failed_cleanup=Failed to cleanup cancelled domain creation
 
 MSG_delete_password_file=Failed to delete temporary password file: {0}
 
+# This message is used to tell a user that the server process has been started in a particular Locale and should 
+# remain as technical as possible.
 MSG_LocaleSwitched=<html>Server cannot operate in current Locale. Locale switched to en_US for the processs.</html>
 STR_V3_SERVER_NAME=GlassFish Server 3
 STR_V31_SERVER_NAME=GlassFish Server 3.1
