--- a/j2ee.sun.appsrv/src/org/netbeans/modules/j2ee/sun/appsrvapi/Bundle.properties
+++ b/j2ee.sun.appsrv/src/org/netbeans/modules/j2ee/sun/appsrvapi/Bundle.properties
@@ -46,9 +46,12 @@
 # Module manifest localization
 OpenIDE-Module-Display-Category=Java EE
 
+# APIs stands for Application Programming Interfaces... it is not a date/time spec
 OpenIDE-Module-Name=GlassFish Application Server Common APIs
 
+# APIs stands for Application Programming Interfaces... it is not a date/time spec
 OpenIDE-Module-Short-Description=GlassFish Application Server  Common APIs
+# APIs stands for Application Programming Interfaces... it is not a date/time spec
 OpenIDE-Module-Long-Description=Plugin for GlassFish Application Server Common APIs
 
 Loaders/xml/sun-resource/Factories/org-netbeans-modules-j2ee-sun-ide-sunresources-resourcesloader-SunResourceDataLoader.instance=GlassFish Resources Files
