--- a/j2ee.sun.appsrv/src/org/netbeans/modules/j2ee/sun/ide/sunresources/wizards/Bundle.properties
+++ b/j2ee.sun.appsrv/src/org/netbeans/modules/j2ee/sun/ide/sunresources/wizards/Bundle.properties
@@ -111,6 +111,7 @@ DBVendor_datadirect_sybase=Sybase (DataDirect Connect for JDBC)
 DBVendor_pointbase=PointBase 4.8
 DBVendor_cloudscape=Cloudscape driver
 DBVendor_informix=IBM Informix driver
+# MM stands for Mark Mathews and is not a date format specifier...
 DBVendor_mysql=MySQL (MM MySQL driver)
 DBVendor_db2=IBM DB2 7.1
 DBVendor_other=Other
