--- a/j2ee.sun.dd/src/org/netbeans/modules/j2ee/sun/dd/Bundle.properties
+++ b/j2ee.sun.dd/src/org/netbeans/modules/j2ee/sun/dd/Bundle.properties
@@ -41,6 +41,8 @@
 # made subject to such option by the copyright holder.
 
 ## web/ddapi/manifest.mf
+# API stands for Application Programming Interface... it is not a date/time spec
+# DD stands for deployment descriptor... it is not a date/time specifier
 OpenIDE-Module-Name=sun-* DD API
 OpenIDE-Module-Display-Category=Java EE
 OpenIDE-Module-Short-Description=Deployment Descriptor API for sun-*.xml files
