--- a/j2ee.sun.ddui/src/org/netbeans/modules/j2ee/sun/ddloaders/multiview/tables/Bundle.properties
+++ b/j2ee.sun.ddui/src/org/netbeans/modules/j2ee/sun/ddloaders/multiview/tables/Bundle.properties
@@ -1,9 +1,9 @@
 jLabel2.text=Name \:
 
-jTextField1.text=someone's name
+jTextField1.text=Someone's name
 
-jTextField2.text=valued or not?
+jTextField2.text=Has a value
 
-jTextField3.text=I have no clue what this is
+jTextField3.text=Unknown
 
 jLabel1.text=*
