--- a/j2ee.sun.ddui/src/org/netbeans/modules/j2ee/sun/share/configbean/customizers/Bundle.properties
+++ b/j2ee.sun.ddui/src/org/netbeans/modules/j2ee/sun/share/configbean/customizers/Bundle.properties
@@ -181,7 +181,7 @@ ACSD_EditPrincipal=Press this button to edit the selected principal name.
 LBL_RemovePrincipals=Remove Principal(s)
 MNE_RemovePrincipal=R
 ACSN_RemovePrincipal=Remove Principal
-ACSD_RemovePrincipal=Press this button to remove the selected principal name(s),
+ACSD_RemovePrincipal=Press this button to remove the selected principal name(s).
 
 LBL_AddGroup=Add Group...
 MNE_AddGroup=D
