--- a/j2ee.sun.ddui/src/org/netbeans/modules/j2ee/sun/share/configbean/customizers/ejbmodule/Bundle.properties
+++ b/j2ee.sun.ddui/src/org/netbeans/modules/j2ee/sun/share/configbean/customizers/ejbmodule/Bundle.properties
@@ -927,35 +927,52 @@ Flush_Header_Tool_Tip=Flush the selected Method on its completion.
 EJB_TITLE=EJB
 
 # PM Destinations panel
+# PM stands for Persistence Manager... it is not a date/time spec
 PM_DESCRIPTORS_TAB=PM Descriptors
+# PM stands for Persistence Manager... it is not a date/time spec
 ACSN_PmDescriptorsTab=PM Descriptors
+# PM stands for Persistence Manager... it is not a date/time spec
 ACSD_PmDescriptorsTab=PM Descriptor configuration for this web application.
 
+# PM stands for Persistence Manager... it is not a date/time spec
 LBL_PmIdentifier=PM Identifier
 MNE_PmIdentifier=I
+# PM stands for Persistence Manager... it is not a date/time spec
 ACSN_PmIdentifier=PM Identifier
 ACSD_PmIdentifier=Enter the persistence manager identifier here.
+# PM stands for Persistence Manager... it is not a date/time spec
 LBL_PmVersion=PM Version
 MNE_PmVersion=V
+# PM stands for Persistence Manager... it is not a date/time spec
 ACSN_PmVersion=PM Version
 ACSD_PmVersion=Enter the persistence manager version here.
+# PM stands for Persistence Manager... it is not a date/time spec
 LBL_PmConfig=PM Configuration
 MNE_PmConfig=C
+# PM stands for Persistence Manager... it is not a date/time spec
 ACSN_PmConfig=PM Configuration
 ACSD_PmConfig=Enter the persistence manager configuration here.
+# PM stands for Persistence Manager... it is not a date/time spec
 LBL_PmClassGenerator=PM Class Generator
 MNE_PmClassGenerator=G
+# PM stands for Persistence Manager... it is not a date/time spec
 ACSN_PmClassGenerator=PM Class Generator
 ACSD_PmClassGenerator=Enter the persistence manager class generator here.
+# PM stands for Persistence Manager... it is not a date/time spec
 LBL_PmMappingFactory=PM Mapping Factory
 MNE_PmMappingFactory=F
+# PM stands for Persistence Manager... it is not a date/time spec
 ACSN_PmMappingFactory=PM Mapping Factory
 ACSD_PmMappingFactory=Enter the persistence manager mapping factory here.
 
+# PM stands for Persistence Manager... it is not a date/time spec
 TITLE_PmDescriptors=PM Descriptors
+# PM stands for Persistence Manager... it is not a date/time spec
 HEADING_PmDescriptors=PM Descriptors
+# PM stands for Persistence Manager... it is not a date/time spec
 ACSN_TABLE_PmDescriptors=PM Descriptors
 ACSD_TABLE_PmDescriptors=Table of currently defined persistence manager implementations.
+# PM stands for Persistence Manager... it is not a date/time spec
 ACSN_POPUP_PmDescriptors=PM Descriptors
 ACSD_POPUP_PmDescriptors=Use this panel to enter references to new persistence manager implementations.
 
