--- a/j2ee.sun.ddui/src/org/netbeans/modules/j2ee/sun/ddloaders/Bundle.properties
+++ b/j2ee.sun.ddui/src/org/netbeans/modules/j2ee/sun/ddloaders/Bundle.properties
@@ -41,6 +41,7 @@
 # Version 2 license, then the option applies only if the new code is
 # made subject to such option by the copyright holder.
 #
+# DD stands for deployment descriptor... it is not a date/time specifier
 OpenIDE-Module-Name=sun-* DD Loaders
 OpenIDE-Module-Display-Category=Java EE
 OpenIDE-Module-Short-Description=Loaders for the sun-* deployment descriptors.
