--- a/j2ee.ejbverification/src/org/netbeans/modules/j2ee/ejbverification/rules/source/Bundle.properties
+++ b/j2ee.ejbverification/src/org/netbeans/modules/j2ee/ejbverification/rules/source/Bundle.properties
@@ -38,7 +38,7 @@
 #
 # Portions Copyrighted 2012 Sun Microsystems, Inc.
 
-DN_UseInjectionInsteadOfInstantion=Instantion repleceable with @EJB injection
+DN_UseInjectionInsteadOfInstantion=Instantion replaceable with @EJB injection
 DESC_UseInjectionInsteadOfInstantion=Finds instantions of a bean which can be injected by @EJB annotation
 FIX_UseInjectionInsteadOfInstantion=Replace Instantion of bean by @EJB injection
 ERR_UseInjectionInsteadOfInstantion=Instantion of bean can be replaced by @EJB injection
