--- a/installer/mac/newbuild/jdk/build.xml
+++ b/installer/mac/newbuild/jdk/build.xml
@@ -53,8 +53,8 @@ Microsystems, Inc. All Rights Reserved.
         <echo message="sizeof.jdk=${size}${line.separator}" file="${basedir}/../build/sizes.pro" append="true"/>
         <echo message="Getting size of JDK - ${size}"/>
         
-        <copy file="${basedir}/../netBeans/baseide/pkg/scripts/set_jdk_home.sh" tofile="${scriptsdir}/set_jdk_home.sh" verbose="yes" />
-        <chmod dir="${scriptsdir}" perm="ugo+x" includes="**/*"/>
+        <copy file="${basedir}/pkg/scripts/set_jdk_home.sh" tofile="${basedir}/../netBeans/baseide/build/scripts/set_jdk_home.sh" verbose="yes" />
+        <chmod file="${basedir}/../netBeans/baseide/build/scripts/set_jdk_home.sh" perm="ugo+x"/>
     </target>
     
 </project>
