fixed Bug #210819 Build Host vs. Development Host

--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/Bundle.properties
@@ -84,7 +84,7 @@ LBL_SetConfigurationAction_Name=Set Configuration
 LBL_ConfigurationsAction_Name=Customize...
 
 # RemoteDevelopmentAction
-LBL_RemoteDevelopmentAction_Name=Set Remote Build Host
+LBL_RemoteDevelopmentAction_Name=Set Build Host
 LBL_ManagePlatforms_Name=Manage Hosts...
 
 # MakeLogicalViewProvider
