Bug 210822 - Can not cancel "Connecting to host" process

--- a/dlight.nativeexecution/src/org/netbeans/modules/nativeexecution/jsch/Bundle.properties
+++ b/dlight.nativeexecution/src/org/netbeans/modules/nativeexecution/jsch/Bundle.properties
@@ -38,4 +38,4 @@
 #
 # Portions Copyrighted 2011 Sun Microsystems, Inc.
 
-JSchConnectionTask.Connecting=Connecting to {0} ...
+ConnectingProgressHandle.Connecting=Connecting to {0} ...
