Fixed #165424 - Autos view is empty if codemodel is not available

--- a/cnd.debugger.common2/src/org/netbeans/modules/cnd/debugger/common2/debugger/Bundle.properties
+++ b/cnd.debugger.common2/src/org/netbeans/modules/cnd/debugger/common2/debugger/Bundle.properties
@@ -223,6 +223,7 @@ ACT_WATCH_Dynamic=Dynamic Type
 ACT_WATCH_Static=Static Members
 
 CTL_WatchesModel_Empty_Watch_Hint=Enter new watch
+CTL_WatchesModel_Warning_Watch_Hint=Warning! Code Assistance is unavailable!
 #
 # for Session view
 #
