--- a/form/src/org/netbeans/modules/form/assistant/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/assistant/Bundle.properties
@@ -88,11 +88,11 @@ unplacedComponents1=Copied or inserted components - not placed in the layout yet
 unplacedComponents2=Move the components via mouse to place them.
 
 # Clickable layout gaps
-layoutGaps=The gaps between components can be selected and adjusted via mouse, or customized in a dialog.
-selectedLayoutGaps_1=To resize the selected gap via mouse, drag the resize handle or use mouse wheel.
-selectedLayoutGaps_2=Double-click the layout gap or invoke <i>Edit Layout Space</i> from context menu to show the customization dialog.
-selectedLayoutGaps_3=If a layout gap is hard to select, invoke <i>Edit Layout Space</i> context menu action on a neighbor component.
-selectedLayoutGaps_4=Adjust the layout gaps instead of moving components, e.g. when making room for inserting new components.
+layoutGaps=The gaps between components can be selected and adjusted via mouse, or edited in a dialog.
+selectedLayoutGaps_1=To resize the selected gap via mouse drag the resize handle or use mouse wheel.
+selectedLayoutGaps_2=Double-click the gap or invoke <i>Edit Layout Space</i> from context menu to show the customization dialog.
+selectedLayoutGaps_3=If a gap is hard to select, invoke <i>Edit Layout Space</i> context menu action on a neighbor component.
+selectedLayoutGaps_4=Adjust the gaps instead of moving components, e.g. when making room for inserting new components.
 
 # Layout managers
 absoluteLayout=Place the component at [{0}, {1}].
