--- a/javafx2.project/src/org/netbeans/modules/javafx2/project/templates/FXMain.template
+++ b/javafx2.project/src/org/netbeans/modules/javafx2/project/templates/FXMain.template
@@ -29,20 +29,23 @@ public class ${name} extends Application {
 
     @Override
     public void start(Stage primaryStage) {
-       primaryStage.setTitle("Hello World!");
-       Button btn = new Button();
-       btn.setText("Say 'Hello World'");
-       btn.setOnAction(new EventHandler<ActionEvent>() {
-           @Override
-           public void handle(ActionEvent event) {
-               System.out.println("Hello World!");
-           }
-       });
+        Button btn = new Button();
+        btn.setText("Say 'Hello World'");
+        btn.setOnAction(new EventHandler<ActionEvent>() {
 
-       StackPane root = new StackPane();
-       root.getChildren().add(btn);
-       primaryStage.setScene(new Scene(root, 300, 250));
-       primaryStage.show();
+            @Override
+            public void handle(ActionEvent event) {
+                System.out.println("Hello World!");
+            }
+        });
+
+        StackPane root = new StackPane();
+        root.getChildren().add(btn);
+
+        Scene scene = new Scene(root, 300, 250);
+
+        primaryStage.setTitle("Hello World!");
+        primaryStage.setScene(scene);
+        primaryStage.show();
     }
-
 }
