--- a/php.samples/samples_src/TodoList/config/config.ini
+++ b/php.samples/samples_src/TodoList/config/config.ini
@@ -39,6 +39,6 @@
 ; Portions Copyrighted 2011 Sun Microsystems, Inc.
 
 [db]
-dsn = "mysql:host=localhost;dbname=todolist;charset=UTF-8"
+dsn = "mysql:host=localhost;dbname=todolist;charset=utf8"
 username = todolist
 password = todolist
