--- a/editor.bookmarks/src/org/netbeans/modules/editor/bookmarks/ui/Bundle.properties
+++ b/editor.bookmarks/src/org/netbeans/modules/editor/bookmarks/ui/Bundle.properties
@@ -43,12 +43,33 @@
 LBL_BookmarksView=Bookmarks
 LBL_BookmarksViewToolTip=Editor Bookmarks in Opened Projects
 LBL_BookmarksAction=&Bookmarks
+LBL_toolBarRefreshButtonToolTip=Refresh Bookmarks View
+LBL_toolBarTreeViewButtonToolTip=Tree View of Bookmarks (Ctrl+T to Toggle View)
+LBL_toolBarTableViewButtonToolTip=Table View of Bookmarks (Ctrl+T to Toggle View)
 LBL_BookmarkName=Name
 LBL_BookmarkNameDescription=Bookmark Name
 LBL_BookmarkNameEmpty=Bookmark name not set
 # Single letter for "Key" in Bookmarks table (the actual shortcut is just a single letter)
 LBL_BookmarkKeySingleLetter=K
 LBL_BookmarkKeyDescription=Bookmark Shortcut Key
-LBL_BookmarkKeyEmpty=Bookmark shortcut key not set
+LBL_BookmarkKeyEmpty=Bookmark shortcut key not set. Use a single char 0-9 or A-Z.
 LBL_BookmarkLocation=Location
 LBL_BookmarkLocationDescription=Bookmark Location in a File
+goto=Goto Line or Bookmark ...
+bookmark-history-popup-next=Bookmark History Popup Next
+bookmark-history-popup-previous=Bookmark History Popup Previous
+CTL_gotoDialogTitle=Go To &Line or Bookmark
+CTL_gotoDialogGotoLabel=Go To &Line or Bookmark
+CTL_gotoDialogBookmarkKeyChooserLabel={0} for bookmark key chooser...
+CTL_gotoDialogGotoButton=Go To
+CTL_gotoDialogCloseButton=Close
+ACSD_gotoDialogTitle=
+ACSD_gotoDialogDescription=
+ACSD_gotoDialogGotoCombo=
+ACSD_gotoDialogGotoButton=
+ACSD_gotoDialogCloseButton=
+CTL_keyChooserTitle=Press Bookmark Key
+CTL_keyChooserCloseButton=Close
+CTL_keyChooserUnoccupiedBookmarkKey=Unoccupied bookmark key. Use Window\u2023Navigating\u2023Bookmarks for key assignment.
+LBL_keyChooserNoActiveKeys=No active bookmark keys.
+LBL_keyChooserNoActiveKeysHelp=Use Window\u2023Navigating\u2023Bookmarks for key assignment.
