--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -589,6 +589,7 @@ nb.cluster.enterprise=\
         apisupport.restsample,\
         cloud.amazon,\
         cloud.common,\
+        cloud.oracle,\
         el.lexer,\
         glassfish.eecommon,\
         glassfish.javaee,\
@@ -626,6 +627,7 @@ nb.cluster.enterprise=\
         libs.commons_fileupload,\
         libs.elimpl,\
         libs.glassfish_logging,\
+        libs.oracle.cloud,\
         maven.j2ee,\
         maven.jaxws,\
         maven.samples,\
