#205910: code completion only waits some time for schema to download

--- a/xml.schema.completion/src/org/netbeans/modules/xml/schema/completion/Bundle.properties
+++ b/xml.schema.completion/src/org/netbeans/modules/xml/schema/completion/Bundle.properties
@@ -68,3 +68,5 @@ Documentation-Text-Attribute-No-Description=No documentation found for this item
 
 Editors/text/xml=XML
 UNKNOWN_TAG_NAME=Unknown tag name
+MSG_PreparingXmlSchemas=Searching for XML schemas...
+COMPL_SchemasLoading=<i>Still processing, more items may appear...</i>
