#210850,#210854: Fixing profiling single file actions in maven projects

--- a/maven/src/org/netbeans/modules/maven/customizer/Bundle.properties
+++ b/maven/src/org/netbeans/modules/maven/customizer/Bundle.properties
@@ -56,6 +56,9 @@ COM_Debug_test=Debug test
 COM_ReBuild_project=Clean and Build project
 COM_Run_project=Run project
 COM_Profile_project=Profile project
+COM_Profile_file_main=Profile file via main()
+COM_Profile_file_deploy=Profile file via deploy
+COM_Profile_test=Profile test
 COM_Javadoc_project=Generate Javadoc
 COM_Build_WithDeps_project=Build with Dependencies
 COM_Run_file_main=Run file via main()
