--- a/j2ee.ejbcore/src/org/netbeans/modules/j2ee/ejbcore/ejb/wizard/jpa/dao/Bundle.properties
+++ b/j2ee.ejbcore/src/org/netbeans/modules/j2ee/ejbcore/ejb/wizard/jpa/dao/Bundle.properties
@@ -65,6 +65,7 @@ ERR_NoRemoteInterfaceProject=<html>There is no suitable project available into w
     Remote interface could be stored. An open Ant-based Java Class Library project is required.
 ERR_NoRemoteInterfaceProjectMaven=<html>There is no suitable project available into which \
     Remote interface could be stored. An open Maven-based Java Class Library project is required.
+ERR_SessionIfaceNotOnProjectClasspath=<html>Class {0} is not available on the project classpath. <br>It could mean missing dependencies or used server without EJB lite support.</html>
 WARN_UpdateClassPath=IDE could not modify classpath of {0} project. Project {1} has to be added to its compilation classpath.
 
 LBL_FacadeWizardTitle=New Session Beans from Entity Classes
