--- a/php.project/src/org/netbeans/modules/php/project/Bundle.properties
+++ b/php.project/src/org/netbeans/modules/php/project/Bundle.properties
@@ -55,14 +55,9 @@ LBL_Node_SeleniumTests=Selenium Test Files
 NAME_src.dir=Source Files
 NAME_test.src.dir=Test Files
 
-MSG_CanFolderRestore=There is no folder {0}. Do you want to restore it?
-LBL_TitleCanFolderRestore={0} - folder does not exist
-MSG_SourcesFolderRestored=Source folder {0} has been restored.
-MSG_SourcesFolderTemporaryToProjectDirectory=<html><b>The Source folder {0} cannot be restored</b>.\nPlease, fix the problem and reopen the project.
-MSG_TestsFolderRestored=Test folder {0} has been restored.
-MSG_TestsFolderTemporaryToProjectDirectory=<html><b>The Test folder {0} cannot be restored</b>.\nPlease, fix the problem and reopen the project.
-MSG_SeleniumFolderRestored=Selenium Test folder {0} has been restored.
-MSG_SeleniumFolderTemporaryToProjectDirectory=<html><b>The Selenium Test folder {0} cannot be restored</b>.\nPlease, fix the problem and reopen the project.
+MSG_SourcesFolderTemporaryToProjectDirectory=<html><b>Source folder {0} cannot be found</b>.\nPlease, fix the problem and reopen the project.
+MSG_TestsFolderTemporaryToProjectDirectory=<html><b>Test folder {0} cannot be found</b>.\nPlease, fix the problem and reopen the project.
+MSG_SeleniumFolderTemporaryToProjectDirectory=<html><b>Selenium Test folder {0} cannot be found</b>.\nPlease, fix the problem and reopen the project.
 
 # browse tests
 LBL_BrowseTests=Select a directory with project test files.
