#210891 - NetBeans help window icon looks ugly

--- a/javahelp/src/org/netbeans/modules/javahelp/Bundle.properties
+++ b/javahelp/src/org/netbeans/modules/javahelp/Bundle.properties
@@ -67,7 +67,7 @@ ACSD_Label=Click here to open this link in a web browser.
 # log messages
 # {0} HelpCtx of the help to be shown
 LOG_SHOWING_HELP=Showing help ID: {0}
-LOG_SHOWING_HELP_ICON_BASE=org/netbeans/modules/javahelp/resources/help.gif
+LOG_SHOWING_HELP_ICON_BASE=org/netbeans/modules/javahelp/resources/help.png
 
 # usage logging
 # {0} HelpCtx of the help to be shown
