#210318 - OutOfMemoryError: Java heap space

--- a/html/src/org/netbeans/modules/html/palette/items/Bundle.properties
+++ b/html/src/org/netbeans/modules/html/palette/items/Bundle.properties
@@ -694,3 +694,4 @@ ACSN_UL_Form=Form
 ACSD_UL_Form=Unordered Form Customizer
 ACSD_SELECT_Name_TextField=Name
 ACSN_SELECT_Name_TextField=&Name\:
+TABLECustomizer.jLabel9.text=Huge tables may cause memory and performance issues!
