--- a/subversion/src/org/netbeans/modules/subversion/options/Bundle.properties
+++ b/subversion/src/org/netbeans/modules/subversion/options/Bundle.properties
@@ -6,6 +6,7 @@ CTL_Repository_Location=Specify the location of Subversion repository.
 
 SvnOptionsPanel.labelsPanel.border.title=Labels
 ACSD_BrowseFolder = Lets you browse for the SVN Executable
+ACSD_BrowseJavahlFolder = Lets you browse for the Javahl libraries
 ACSD_ManageConnections = Lets you to manage Subversion Connection Settings
 ACSD_ManageLabels = Lets you to manage Subversion Status Labels
 
@@ -16,6 +17,7 @@ CTL_ManageLabels = Manage Labels
 SVNExec=Folders
 OK_Button=OK
 Browse_title=Browse for the SVN Executable
+Browse_Javahl_title=Browse for the Javahl Libraries
 
 SvnOptionsPanel.connectionsSettingsPanel.TabConstraints.tabTitle=Connection Settings
 SvnOptionsPanel.browseButton.text=&Browse...
@@ -105,6 +107,7 @@ ACSD_SvnOptionsPanel.cbOpenOutput.text=Subversion commands log their output into
 SvnOptionsPanel.excludeNewFiles.toolTipText=Newly created files will have to be manually included in commit
 SvnOptionsPanel.excludeNewFiles.text=Apply "&Exclude From Commit" On New Files Automatically
 FileChooser.SvnExecutables.desc=SVN Executables
+FileChooser.SvnLibs.desc=SVN Javahl Libraries
 SvnOptionsPanel.prefixRepositoryPath.text=Prefix &Repository Location with Repository URL
 SvnOptionsPanel.prefixRepositoryPath.toolTipText=Displayed values in Repository Location column in several views will be prefixed with the URL of a repository
 SvnOptionsPanel.jLabel9.text=Locking Settings
@@ -112,3 +115,14 @@ SvnOptionsPanel.cbGetRemoteLocks.text=Check Repository For &Locked Files
 SvnOptionsPanel.cbGetRemoteLocks.TTtext=Status refresh action will also check locks in the repository. This may take some time.
 SvnOptionsPanel.cbAutoLockFiles.toolTipText=Automatically locks files with svn:needs-lock property set before edit
 SvnOptionsPanel.cbAutoLockFiles.text=L&ock Edited Files With svn:needs-lock Property
+SvnOptionsPanel.jLabel10.text=Preferred client:
+SvnOptionsPanel.jLabel12.text=&Path to the client libraries folder:
+SvnOptionsPanel.jLabel11.text=(e.g., C:\\Program Files\\Subversion\\bin)
+SvnOptionsPanel.jLabel11.unix.text=(e.g., /usr/lib)
+LBL_PreferredClient.CLI = CLI
+LBL_PreferredClient.JAVAHL = Javahl
+LBL_PreferredClient.SVNKIT = SvnKit
+SvnOptionsPanel.browseJavahlButton.text=&Browse...
+SvnOptionsPanel.lblRestartWarning.text=Restart may be needed!
+SvnOptionsPanel.textPaneClient.contentType=text/html
+OptionsPanel.textPaneClient.text=<html><body>For more information on different kinds of Subversion clients see the <a href="http://wiki.netbeans.org/FaqSubversionClients">Supported Clients FAQ</a></body></html>
