Issue #210804: Implement an interface into an existing class - fixed.

--- a/java.hints/src/org/netbeans/modules/java/hints/suggestions/Bundle.properties
+++ b/java.hints/src/org/netbeans/modules/java/hints/suggestions/Bundle.properties
@@ -70,6 +70,7 @@ ERR_ImplementInterface=Implement Interface
 FIX_ImplementInterface=Implement Interface
 LBL_ClassName=Class Name:
 LBL_PackageName=Package Name:
+ERR_IncompatibleSupertype=Selected class {0} has an incompatible supertype
 
 DN_org.netbeans.modules.java.hints.suggestions.Tiny.fillSwitch=Fill Missing Cases to Switch
 DESC_org.netbeans.modules.java.hints.suggestions.Tiny.fillSwitch=Adds missing cases to switch statement. \
