Bug 210401 - Usability problems with "New Remote Build Host" wizard.

--- a/cnd.remote/src/org/netbeans/modules/cnd/remote/ui/wizard/Bundle.properties
+++ b/cnd.remote/src/org/netbeans/modules/cnd/remote/ui/wizard/Bundle.properties
@@ -41,7 +41,6 @@
 # made subject to such option by the copyright holder.
 
 CreateHostVisualPanel1.Title=Select Host
-CreateHostVisualPanel1.textHostname.text=
 CreateHostVisualPanel2.Title=Setup Host
 CreateHostVisualPanel2.jLabel1.text=&Login:
 CreateHostVisualPanel2.textLoginName.text=
@@ -57,9 +56,7 @@ CreateHostVisualPanel2.tpOutput.text=
 CreateHostVisualPanel3.labelPlatformValue.text=N/A
 CreateHostVisualPanel3.labelHostnameValue.text=N/A
 CreateHostVisualPanel3.labelUsernameValue.text=N/A
-CreateHostVisualPanel1.tableHostsList.columnModel.title0=Host
 CreateHostVisualPanel1.tableHostsList.columnModel.title2=Platform
-CreateHostVisualPanel1.tableHostsList.columnModel.title1=Availability
 HostAvailable=Available
 HostUnavailable=No SSH Access
 
@@ -68,7 +65,6 @@ CreateHostVisualPanel2.MsgAlreadyConnected2=Done.
 CreateHostVisualPanel2.MsgConnectingTo=Connecting to {0}...
 CreateHostVisualPanel2.MsgDone= Done.
 CreateHostVisualPanel2.ErrConn= Error:
-CreateHostVisualPanel1.textPort.text=22
 CreateHostVisualPanel3.jLabel4.text=&Access project files via:
 
 MSG_Failure=Can not set up host
@@ -82,8 +78,6 @@ SelectHostVisualPanel.title=Select Remote Host
 CreateHostVisualPanel2.jPanel1.border.title=Identification
 SelectHostVisualPanel.jRadioButton1.text=jRadioButton1
 SelectHostVisualPanel.jRadioButton2.text=jRadioButton2
-CreateHostVisualPanel1.lblHostName.text=H&ostname:
-CreateHostVisualPanel1.lblPort.text=&Port:
 CreateHostVisualPanel1.lblNeighbouthood.text=N&etwork neighborhood:
 SelectHostVisualPanel.rbExistent.text=&Existing Build Host
 SelectHostVisualPanel.rbNew.text=&New Build Host
@@ -94,3 +88,11 @@ ConnectCancelledMessage=Connection to the host has been canceled
 CreateHostVisualPanel1.lblUser.text=&User:
 CreateHostVisualPanel1.textUser.text=
 EmptyLoginMessage=Login name not specified
+
+CreateHostWizardPanel1.error.noHost=Provide host name
+CreateHostWizardPanel1.error.noUser=Provide user name
+CreateHostWizardPanel1.error.invalidPort=Invalid port number specified
+CreateHostWizardPanel1.error.invalidProxy=Proxy settings are wrong
+CreateHostWizardPanel1.error.pingFailed=Unable to establish connection with {0} on port {1}
+CreateHostWizardPanel1.info.connecting=Testing host {0} for availability on port {1} ...
+CreateHostVisualPanel1.cbProxySettings.text=Proxy &Settings
