Bug 210401 [item 4.] - Usability problems with "New Remote Build Host" wizard.
'New Remote Build Host' -> 'New Remote Host Setup'

--- a/cnd.remote/src/org/netbeans/modules/cnd/remote/ui/setup/Bundle.properties
+++ b/cnd.remote/src/org/netbeans/modules/cnd/remote/ui/setup/Bundle.properties
@@ -1,4 +1,4 @@
-CreateNewHostWizardTitle=New Remote Build Host
+CreateNewHostWizardTitle=New Remote Host Setup
 CreateHostVisualPanel0.Title=Select Host Type
 NoProviders_Message=No applicable remote setup providers found
 NoProviders_Title=Error
