fixed #210209 - Separate debug and run commands

--- a/cnd.debugger.common2/src/org/netbeans/modules/cnd/debugger/common2/debugger/options/Bundle.properties
+++ b/cnd.debugger.common2/src/org/netbeans/modules/cnd/debugger/common2/debugger/options/Bundle.properties
@@ -499,3 +499,9 @@ Signal_IgnoredDefault=[Ignored by default]
 
 GeneralTxt=General
 GeneralHint=General
+
+LABEL_debug_command=Debug command
+ACSD_debug_command=Command to use for debugging instead of the Run command
+
+LABEL_debug_dir=Working dir
+ACSD_debug_dir=Working dir to use instead of the Run working dir
