--- a/libs.testng/nbproject/project.properties
+++ b/libs.testng/nbproject/project.properties
@@ -41,10 +41,10 @@
 # made subject to such option by the copyright holder.
 
 is.autoload=true
-release.external/testng-6.5beta-dist.jar=modules/ext/testng-6.5beta-dist.jar
-release.external/testng-6.5beta-javadoc.zip=docs/testng-6.5beta-javadoc.zip
+release.external/testng-6.5.1-dist.jar=modules/ext/testng-6.5.1-dist.jar
+release.external/testng-6.5.1-javadoc.zip=docs/testng-6.5.1-javadoc.zip
 sigtest.skip.check=true
 sigtest.fail.on.error=false
 jnlp.indirect.jars=\
-    docs/testng-6.5beta-javadoc.zip,\
-    modules/ext/testng-6.5beta-dist.jar
+    docs/testng-6.5.1-javadoc.zip,\
+    modules/ext/testng-6.5.1-dist.jar
