--- a/web.jsf.icefaces/src/org/netbeans/modules/web/jsf/icefaces/resources/welcomeIcefaces.template
+++ b/web.jsf.icefaces/src/org/netbeans/modules/web/jsf/icefaces/resources/welcomeIcefaces.template
@@ -1,19 +1,33 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ace="http://www.icefaces.org/icefaces/components"
-      xmlns:h="http://java.sun.com/jsf/html">
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:icecore="http://www.icefaces.org/icefaces/core"
+      xmlns:ace="http://www.icefaces.org/icefaces/components">
     <h:head>
         <title>ICEfaces Welcome Page</title>
+        <!-- This line is only for ice component, remove it if no ice component is used in this page.-->
+        <link rel="stylesheet" type="text/css" href="./xmlhttp/css/rime/rime.css"/>
     </h:head>
     <h:body>
-        <!-- Note: icefaces-ace.jar (of version 3.0) has to be included on project classpath. -->
-        <h:commandButton value="Welcome to ICEfaces" onclick="welcomeDialog.show();" type="button"/>
+        <h:form>
 
-        <ace:dialog header="Welcome to ICEfaces" widgetVar="welcomeDialog" showEffect="clip" hideEffect="explode">
-            <h:outputText value="Welcome to development in ICEfaces." />
-            <br /><br />
-            <h:outputLink value="http://www.icesoft.org/projects/ICEfaces/documentation.jsf" >ICEfaces documentation...</h:outputLink>
-        </ace:dialog>
+            <ace:panel header="Welcome to ICEfaces">
+                <h:panelGrid columns="1">
+                    <ace:linkButton id="linkButton1" value="ICEfaces Overview" href="http://wiki.icesoft.org/display/ICE/ICEfaces+Overview"></ace:linkButton>
+                    <ace:linkButton id="linkButton2" value="General Documentation" href="http://wiki.icesoft.org/display/ICE/ICEfaces+Documentation"></ace:linkButton>
+                    <ace:linkButton id="linkButton3" value="ICEfaces Demos" href="http://www.icesoft.org/demos/icefaces-demos.jsf"></ace:linkButton>
+                    <ace:linkButton id="linkButton4" value="Tutorials" href="http://www.icesoft.org/community/tutorials-samples.jsf"></ace:linkButton>
+                    <ace:linkButton id="linkButton5" value="ACE components" href="http://wiki.icesoft.org/display/ICE/ACE+Components"></ace:linkButton>
+                    <ace:linkButton id="linkButton6" value="ICE components" href="http://wiki.icesoft.org/display/ICE/ICE+Components"></ace:linkButton>
+                    <!-- You can also use ice components. Adds ice namespace in that case: xmlns:ice="http://www.icesoft.com/icefaces/component" -->
+                    <!-- <ice:outputLink id="aceLink" value="http://wiki.icesoft.org/display/ICE/ACE+Components" target="_blank">ACE components</ice:outputLink> -->
+                    <!-- <ice:outputLink id="iceLink" value="http://wiki.icesoft.org/display/ICE/ICE+Components" target="_blank">ICE components</ice:outputLink> -->
+                </h:panelGrid>
+            </ace:panel>
+            
+        </h:form>
     </h:body>
 </html>
