Issue #210114: Pasting '\n' into string literal adds \ - fixed.

--- a/java.editor/src/org/netbeans/modules/java/editor/imports/Bundle.properties
+++ b/java.editor/src/org/netbeans/modules/java/editor/imports/Bundle.properties
@@ -89,6 +89,7 @@ BTN_ClipboardImportOK=OK
 BTN_ClipboardImportCancel=Cancel
 MSG_ClipboardImportImportClasses=Import Classes
 MSG_ClipboardImportFlavor=Java code with imports
+MSG_ClipboardCopyFromStringFlavor=Java code copied from string literal
 
 cut-to-line-begin=Cut from Insertion Point to Line Begining
 cut-to-line-end=Cut from Insertion Point to Line End
