#210700 - Editor Search in 7.2 is different than in 7.0

--- a/options.editor/src/org/netbeans/modules/options/generaleditor/Bundle.properties
+++ b/options.editor/src/org/netbeans/modules/options/generaleditor/Bundle.properties
@@ -108,6 +108,15 @@ AD_When_Saving_Files=When Saving Files
 CTL_Remove_Trailing_Whitespace=Remove Trailing Whitespace
 AN_Remove_Trailing_Whitespace=Remove Trailing Whitespace
 AD_Remove_Trailing_Whitespace=Remove Trailing Whitespace
+CTL_Search=Search
+AN_Search=Search
+AD_Search=Search
+CTL_Editor_Search_Type=Editor Search Type
+AN_Editor_Search_Type=Editor Search Type
+AD_Editor_Search_Type=Editor Search Type
+EST_closing=Closing
+EST_default=Default
+Editor_Search_Type_Tooltip= In Closing type Enter accepts search match, Esc jumps to start. Both close searchbar. Default type closes searchbar by Esc or button. Enter means find a new instance.
 RTW_never=Never
 RTW_always=Always
 RTW_modified-lines=From Modified Lines Only
