kganfield suggests that "Filter" should be labeled "Search" for clarity.

--- a/maven/src/org/netbeans/modules/maven/newproject/Bundle.properties
+++ b/maven/src/org/netbeans/modules/maven/newproject/Bundle.properties
@@ -70,5 +70,5 @@ ChooseArchetypePanel.taDescription.text=Searching...
 ChooseArchetypePanel.labelArchetypes.text=Known Arche&types:
 ChooseArchetypePanel.labelRepository.text=&Repository:
 ChooseArchetypePanel.showOld.text=Show &Older
-ChooseArchetypePanel.labelFilter.text=&Filter:
+ChooseArchetypePanel.labelFilter.text=&Search:
 ChooseArchetypePanel.labelArtifactId.text=&Artifact ID:
