Fixed Icon, BackgroundUpdate and OfflineAllowed handling in FX-in-Swing projects

--- a/javafx2.project/src/org/netbeans/modules/javafx2/project/Bundle.properties
+++ b/javafx2.project/src/org/netbeans/modules/javafx2/project/Bundle.properties
@@ -251,6 +251,7 @@ COMMENT_oldjnlp=Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0 projects
 COMMENT_oldjar=Non-JavaFX 2.0 jar file creation is deactivated in JavaFX 2.0 projects
 COMMENT_prepreloader=Preloader can not use a preloader
 COMMENT_updatemode=If true, application update mode is set to 'background', if false, update mode is set to 'eager'
+COMMENT_updatemode_swing=If true, application update mode is set to 'background', if false, update mode is set to 'always'
 COMMENT_app_args=Do not set application arguments here, this property is re-generated from javafx.param.* properties
 COMMENT_rebase_libs=Set true for GlassFish only. Rebases manifest classpaths of JARs in lib dir. Not usable with signed JARs.
 COMMENT_run_as_defaults=Do not modify this property in this configuration. It can be re-generated.
