--- a/javafx2.project/src/org/netbeans/modules/javafx2/project/ui/Bundle.properties
+++ b/javafx2.project/src/org/netbeans/modules/javafx2/project/ui/Bundle.properties
@@ -86,7 +86,7 @@ AN_JFXDeploymentPanel.checkBoxMenuShortcut.text=Add Start &Menu shortcut
 LBL_JFXDeploymentPanel.buttonIcon.text=&Browse...
 AD_JFXDeploymentPanel.buttonIcon.text=N/A
 AN_JFXDeploymentPanel.buttonIcon.text=&Browse...
-LBL_JFXDeploymentPanel.checkBoxUnrestrictedAcc.text=&Request unrestricted access
+LBL_JFXDeploymentPanel.checkBoxUnrestrictedAcc.text=&Request unrestricted access (Enable signing)
 AD_JFXDeploymentPanel.checkBoxUnrestrictedAcc.text=N/A
 AN_JFXDeploymentPanel.checkBoxUnrestrictedAcc.text=&Request unrestricted access
 LBL_JFXDeploymentPanel.labelSigning.text=&Signing Certificate:
@@ -248,6 +248,7 @@ JFXRunPanel.comboBoxWebBrowser.AccessibleContext.accessibleDescription=Web Brows
 JFXRunPanel.buttonWebBrowser.AccessibleContext.accessibleName=&Manage...
 JFXDeploymentPanel.labelInitialRemark.AccessibleContext.accessibleDescription=N/A
 JFXDeploymentPanel.labelProperties.AccessibleContext.accessibleDescription=N/A
-JFXDeploymentPanel.labelInitialRemarkSwing.text=<html>Single JNLP deployment file will be generated for Web Start and Browser deployment using properties set in Application, Run and Deployment panels. Active Run Configuration is used from Run panel.</html>
+JFXDeploymentPanel.labelInitialRemarkSwing.text=<html>Two JNLP deployment files will be generated separately for Web Start and Browser (Applet) deployment using properties set in Application, Run and Deployment panels. Active Run Configuration is used from Run panel.</html>
 JFXDeploymentPanel.labelInitialRemarkSwing.AccessibleContext.accessibleDescription=N/A
 JFXApplicationClassChooser.jLabel1.AccessibleContext.accessibleDescription=N/A
+JFXDeploymentPanel.labelPropertiesSwing.text=Web Start Properties
