#210023: including spi.java.hints' javadoc in the list of under-development javadocs

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -182,6 +182,8 @@ config.javadoc.devel=\
     versioning,\
     sampler,\
     spi.editor.hints,\
+    spi.java.hints,\
+    java.hints.test,\
     api.web.webmodule,\
     xml.xam,\
     xml.xdm
