Separating NetBeans javac services into a separate module/library

--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -512,6 +512,7 @@ nb.cluster.java=\
         jellytools,\
         jellytools.java,\
         junit,\
+        lib.nbjavac,\
         libs.cglib,\
         libs.javacapi,\
         libs.javacimpl,\
