#206333 - improving plugin name and description.

--- a/web.kit/src/org/netbeans/modules/web/kit/Bundle.properties
+++ b/web.kit/src/org/netbeans/modules/web/kit/Bundle.properties
@@ -1,5 +1,9 @@
 OpenIDE-Module-Display-Category=Java Web and EE
-OpenIDE-Module-Name=Java Web Applications
-OpenIDE-Module-Short-Description=Basic Java web application support.
-OpenIDE-Module-Long-Description=Provides support for developing web applications in Java: \
-    managing projects, editing servlets and JSP pages, refactoring, deploying and debugging.
+OpenIDE-Module-Name=Java EE Base
+OpenIDE-Module-Short-Description=Baselevel support for developing Java EE applications.
+OpenIDE-Module-Long-Description=Provides baselevel support for Java EE, i.e. web application project \
+    and basic wizards, plus support for deployment, debugging and profiling web applications on \
+    GlassFish, WebLogic, Tomcat and JBoss. Support for additional Java EE technologies such as \
+    Java Persistence, JSF and JSF component suites, REST and SOAP web services, EJB or EAR projects \
+    needs to be installed and enabled separately, as well as support for more web frameworks such \
+    as Spring or Hibernate.
