Bugfix #211166 - Tooltips for buttons in Edit Projects dialog

--- a/profiler/src/org/netbeans/modules/profiler/ui/panels/Bundle.properties
+++ b/profiler/src/org/netbeans/modules/profiler/ui/panels/Bundle.properties
@@ -60,3 +60,5 @@ ProjectSelectorPanel.removeButton.text=<
 ProjectSelectorPanel.lblAvailable.text=Available Projects:
 ProjectSelectorPanel.lblSelected.text=Selected Projects:
 ProjectSelectorPanel.jLabel1.text=Hint: Use SPACE to select/deselect projects
+ProjectSelectorPanel.addButton.toolTipText=Add selected project(s) to the Selected Projects list
+ProjectSelectorPanel.removeButton.toolTipText=Remove selected project(s) from the Selected Projects list
