--- a/gsf.testrunner/src/org/netbeans/modules/gsf/testrunner/Bundle.properties
+++ b/gsf.testrunner/src/org/netbeans/modules/gsf/testrunner/Bundle.properties
@@ -1,5 +1,6 @@
 OpenIDE-Module-Name=Common Test Runner API
 OpenIDE-Module-Short-Description=Provides a common API for the Test Results window
 
+UnitTests_displayname=Unit Tests
 MSG_NoTestTarget_Fo=Unable to locate test package folders for folder "{0}". The project must contain a test package folder to create tests. You can designate test package folders for your project in the Sources pane of the project Properties dialog.
 MSG_NoTestTarget_Fi=Unable to locate test package folder for file "{0}". The project must contain a test package folder to create tests. You can designate test package folders for your project in the Sources pane of the project Properties dialog.
